--- a/index.html
+++ b/index.html
@@ -201,12 +201,13 @@ footer {
   <div class="hero-text">
     <h1>Сайфуллаев Шерали Султонович</h1>
     <h2>МАЪЛУМОТИ:<br>
-        2006 — Янгиёр тумани «Гулбахор саноат» касб-ҳунар коллежини тамомлаган.<br>
+        2006 — Янгиёл тумани «Гулбахор саноат» касб-ҳунар коллежини тамомлаган.<br>
         МУТАХАССИСЛИГИ:<br>
         Ҳуқуқшунос-иқтисодчи</h2>
     <p>Партиявийлиги: йуқ<br>
        Маълумоти: Урта махсус<br>
-       Маълумоти буйича мутахассислиги: Илмий даражаси:йуқ<br>
+       Маълумоти буйича мутахассислиги: Хуқуқшунос, Иқтисодчи<br>
+ Илмий даражаси:йуқ<br>
        Қайси чет тилларини билади: йуқ<br>
        Тамомлаган: Касб хунар коллежи<br>
        Хуқуқшунос иқтисодчи илмий унвони: йуқ<br>
