--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@ footer {
 </section>
 
 <section id="about" class="about">
-  <img src="https://www.dropbox.com/scl/fi/65j8sprs58yb7pniumzsv/Screenshot_20251125_190755_All-Document-Reader.jpg?rlkey=gjws4p14s63f7d0o04xl06clq&st=yqh137x5&dl=1
-" alt="men">
+  <img src="https://www.dropbox.com/scl/fi/2zs7lu81dxa51kg7c8joe/Picsart_25-11-25_21-42-41-707.jpg?rlkey=pzo3xcwgauuyj5ynxwdc0sxp8&st=ppffsyxx&dl=1"alt="men">
   <div>
     <h2>Мен хакимда</h2>
     <p>
