--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ footer {
   <div class="hero-text">
     <h1>Сайфуллаев Шерали Султонович</h1>
     <h2>МАЪЛУМОТИ:<br>
-        <h2 class="fire-text">2006 — Янгиёл тумани «Гулбахор саноат» касб-ҳунар коллежини тамомлаган.<h2><br>
+        2006 — Янгиёл тумани «Гулбахор саноат» касб-ҳунар коллежини тамомлаган.<br>
         МУТАХАССИСЛИГИ:<br>
         Ҳуқуқшунос-иқтисодчи</h2>
     <p>Партиявийлиги: йўқ<br>
